# 100kinsat-comeback-2026

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.github/workflows/: ci.yml
doc/cansat_specification/: hardware.md  software.md
doc/development/: build_arduino_cli.md  camera_bringup.md  datalog_bringup.md  development_workflow.md  gnss_bringup.md  imu_bringup.md  landing_bringup.md  motor_bringup.md  notifier_bringup.md  release_detect_bringup.md  separator_bringup.md  serial_shell.md  spresense_gotchas.md  spresense_setup.md
doc/種子島ロケットコンテスト_2026年大会/pdf2md/: CanSat競技の計測と評価の細則_CanSat_appendix_2026.md  参加者向け大会要領_contest2026_rule.md
libraries/ntshell/: LICENSE  library.properties
libraries/ntshell/src/: ntshell_spresense_arduino.c
src/: README.md
src/blink_led/: blink_led.ino
src/flight/: flight.ino
src/lib/core/: README.md  cli.cpp  cli.h  compass.cpp  compass.h  cone_detect.cpp  cone_detect.h  datalog.cpp  datalog.h  geo.cpp  geo.h  gnss.cpp  gnss.h  gnss_fix.cpp  gnss_fix.h  gpio.h  landing.cpp  landing.h  motor.cpp  motor.h  notifier.cpp  notifier.h  release_detect.cpp  release_detect.h  separator.cpp  separator.h
src/lib/hal/: README.md  arduino_gpio.h  bno055.h  sd_image_store.h  sd_log_sink.h  spresense_camera.h  spresense_gnss.h  spresense_pins.h
src/shell/: shell.ino
test/: CMakeLists.txt  README.md  doctest_main.cpp
test/core/: test_cli.cpp  test_compass.cpp  test_cone_detect.cpp  test_datalog.cpp  test_geo.cpp  test_gnss.cpp  test_landing.cpp  test_motor.cpp  test_notifier.cpp  test_release_detect.cpp  test_separator.cpp
test/data/camera/: README.md  indoor_noCone_room-light_001.yuv
tools/: build.sh  gen_compile_commands.sh  monitor.sh  precheck.sh  test.sh  upload.sh
